Añadido Material Icons CDN

--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,21 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Aula13</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="#1976d2">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#1976d2">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+
 <body>
   <a13-root></a13-root>
-  <noscript>Please enable JavaScript to continue using this application.</noscript>
+  <noscript>Por favor, habilita JavaScript para seguir usando esta aplicación.</noscript>
 </body>
+
 </html>
