@font-face preload

--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,16 @@
   <meta name="theme-color" content="#1976d2">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.json">
+
 </head>
 
 <body>
   <a13-root></a13-root>
   <noscript>Por favor, habilita JavaScript para seguir usando esta aplicación.</noscript>
+
+  <link rel="preload" as="font" href="assets/fonts/varela-round-v11-latin-regular.woff2" type="font/woff2" crossorigin>
+  <link rel="preload" as="font" href="assets/fonts/MaterialIcons-Regular.woff2" type="font/woff2" crossorigin>
+
 </body>
 
 </html>
