--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#1976d2">
+  <meta name="theme-color" content="#2c365b">
+  <meta name="description" content="Organiza tus clases particulares: notas, calendario, perfil de alumno, etc.">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.json">
 
