--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#2c365b">
   <meta name="description" content="Organiza tus clases particulares: notas, calendario, perfil de alumno, etc.">
+  
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="apple-touch-icon" href="/assets/icons/icon-192x192.png" />
   <link rel="manifest" href="manifest.json">
 
 </head>
