Change index title

--- a/src/index.html
+++ b/src/index.html
@@ -3,23 +3,23 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Aula13</title>
+  <title>Aula 13 project</title>
   <base href="/">
 
+  <meta name="description" content="La app que te ayuda con la organización de tus alumnos y clases particulares.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#2c365b">
-  <meta name="description" content="Organiza tus clases particulares: notas, calendario, perfil de alumno, etc.">
-  
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/assets/icons/icon-192x192.png" />
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="/manifest.json">
 
 </head>
 
 <body>
   <a13-root></a13-root>
   <noscript>Por favor, habilita JavaScript para seguir usando esta aplicación.</noscript>
-  
+
   <link rel="preload" as="font" href="/assets/fonts/MaterialIcons-Regular.woff2" type="font/woff2" crossorigin>
   <link rel="preload" as="font" href="/assets/fonts/varela-round-v11-latin-regular.woff2" type="font/woff2" crossorigin>
 
