--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,16 @@
   <meta name="description" content="La app que te ayuda con la organización de tus alumnos y clases particulares.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#2c365b">
+  <meta name="msapplication-TileColor" content="#2c365b">
+  <meta name="msapplication-config" content="/assets/icons/browserconfig.xml">
 
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
-  <link rel="apple-touch-icon" href="/assets/icons/icon-192x192.png" />
   <link rel="manifest" href="/manifest.json">
-
+  <link rel="shortcut icon" href="/assets/icons/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
+  <link rel="apple-touch-icon" href="/assets/icons/icon-192x192.png" />
+  <link rel="mask-icon" href="/assets/icons/safari-pinned-tab.svg" color="#2c365b">
+ 
 </head>
 
 <body>
