Update environment configuration

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Aula 13 project</title>
+  <title>Aula 13</title>
   <base href="/">
 
   <meta name="description" content="La app que te ayuda con la organización de tus alumnos y clases particulares.">
