--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
 
   <meta name="description" content="La app que te ayuda con la organización de tus alumnos y clases particulares.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="apple-mobile-web-app-title" content="Aula 13">
+  <meta name="application-name" content="Aula 13">
   <meta name="theme-color" content="#0259af">
   <meta name="msapplication-TileColor" content="#0259af">
   <meta name="msapplication-config" content="/assets/icons/browserconfig.xml">
@@ -16,9 +18,9 @@
   <link rel="shortcut icon" href="/assets/icons/favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
-  <link rel="apple-touch-icon" href="/assets/icons/icon-192x192.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
   <link rel="mask-icon" href="/assets/icons/safari-pinned-tab.svg" color="#0259af">
- 
+
 </head>
 
 <body>
