--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <base href="/">
 
   <meta name="description" content="La app que te ayuda con la organización de tus alumnos y clases particulares.">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta name="apple-mobile-web-app-title" content="Aula 13">
   <meta name="application-name" content="Aula 13">
   <meta name="theme-color" content="#0259af">
